--- a/Gamer.html
+++ b/Gamer.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="" content="">
     <meta charset="" content="">
-    <title>Document</title>
+    <title>Embalados/tecnología</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
@@ -77,8 +77,10 @@
 
                     <div class="carritoTotal">
                         <div class="fila">
-                            <strong>total: S/</strong>
-                            <p class="precioTotal precioTotal01"></p>
+                            <strong>Tu total</strong>
+                            <p class="precioTotal precioTotal01">
+                                S/
+                            </p>
                         </div>
                         <div class="botones">
                             <button class="btnPagar" id="pagar"> Comprar ahora</button>
@@ -111,7 +113,8 @@
                 <ul class="menuCategorias">
                     <div id="list">
                         <span> <i class='bx bx-list-ul'></i> Categorias <i
-                                class='bx bxs-chevron-left bx-rotate-270'></i> </span>
+                                class='bx bxs-chevron-left bx-rotate-270'></i>
+                        </span>
                     </div>
                     <li>
 
@@ -119,67 +122,145 @@
                         <ul id="cat">
                             <li><a href="#">Componentes informáticos</a>
                                 <div class="refencia a1">
-                                    <img src="img/SLIDER-PROPUESTA-1.png" alt="">
+                                    <img src="" alt="">
+                                    <img src="" alt="">
+                                    <img src="" alt="">
+                                    <img src="" alt="">
+                                    <img src="" alt="">
+                                    <img src="" alt="">
+
                                 </div>
                             </li>
                             <li><a href="Tecnologia.html">Tecnología</a>
                                 <div class="refencia a2">
                                     <img src="" alt="">
+                                    <img src="" alt="">
+                                    <img src="" alt="">
+                                    <img src="" alt="">
+                                    <img src="" alt="">
+                                    <img src="" alt="">
+
                                 </div>
                             </li>
                             <li><a href="Gamer.html">Gamer</a>
                                 <div class="refencia a3">
                                     <img src="" alt="">
+                                    <img src="" alt="">
+                                    <img src="" alt="">
+                                    <img src="" alt="">
+                                    <img src="" alt="">
+                                    <img src="" alt="">
+
                                 </div>
                             </li>
                             <li><a href="#">Belleza y cuidado personal</a>
                                 <div class="refencia a4">
                                     <img src="" alt="">
+                                    <img src="" alt="">
+                                    <img src="" alt="">
+                                    <img src="" alt="">
+                                    <img src="" alt="">
+                                    <img src="" alt="">
+
                                 </div>
                             </li>
                             <li><a href="#">Salud y bienestar</a>
                                 <div class="refencia a5">
                                     <img src="" alt="">
+                                    <img src="" alt="">
+                                    <img src="" alt="">
+                                    <img src="" alt="">
+                                    <img src="" alt="">
+                                    <img src="" alt="">
+
                                 </div>
                             </li>
                             <li><a href="#">Home Office</a>
                                 <div class="refencia a6">
                                     <img src="" alt="">
+                                    <img src="" alt="">
+                                    <img src="" alt="">
+                                    <img src="" alt="">
+                                    <img src="" alt="">
+                                    <img src="" alt="">
+
                                 </div>
                             </li>
                             <li><a href="#">Consolas y video juegos</a>
                                 <div class="refencia a7">
                                     <img src="" alt="">
+                                    <img src="" alt="">
+                                    <img src="" alt="">
+                                    <img src="" alt="">
+                                    <img src="" alt="">
+                                    <img src="" alt="">
+
                                 </div>
                             </li>
                             <li><a href="#">Deportes y exteriores</a>
                                 <div class="refencia a8">
                                     <img src="" alt="">
+                                    <img src="" alt="">
+                                    <img src="" alt="">
+                                    <img src="" alt="">
+                                    <img src="" alt="">
+                                    <img src="" alt="">
+
                                 </div>
                             </li>
                             <li><a href="#">Seguridad</a>
                                 <div class="refencia a9">
                                     <img src="" alt="">
+                                    <img src="" alt="">
+                                    <img src="" alt="">
+                                    <img src="" alt="">
+                                    <img src="" alt="">
+                                    <img src="" alt="">
+
                                 </div>
                             </li>
                             <li><a href="#">Bioseguridad</a>
                                 <div class="refencia a10">
                                     <img src="" alt="">
+                                    <img src="" alt="">
+                                    <img src="" alt="">
+                                    <img src="" alt="">
+                                    <img src="" alt="">
+                                    <img src="" alt="">
+
                                 </div>
                             </li>
                             <li><a href="#">TV - audio</a>
                                 <div class="refencia a11">
                                     <img src="" alt="">
+                                    <img src="" alt="">
+                                    <img src="" alt="">
+                                    <img src="" alt="">
+                                    <img src="" alt="">
+                                    <img src="" alt="">
+
                                 </div>
                             </li>
                             <li><a href="#">Transporte</a>
                                 <div class="refencia a12">
                                     <img src="" alt="">
+                                    <img src="" alt="">
+                                    <img src="" alt="">
+                                    <img src="" alt="">
+                                    <img src="" alt="">
+                                    <img src="" alt="">
+
                                 </div>
                             </li>
                             <li><a href="#" class="active">Marcas</a>
                                 <div class="refencia a13">
                                     <img src="" alt="">
+                                    <img src="" alt="">
+                                    <img src="" alt="">
+                                    <img src="" alt="">
+                                    <img src="" alt="">
+                                    <img src="" alt="">
+
                                 </div>
                             </li>
 
@@ -266,7 +347,7 @@
 
                     <li class="componentes "><a href="Gamer.html">Gamer</a>
                         <ul class="subcomponentes c2">
-                            <li><a href="Gamer.html">Monitores</a>
+                            <li><a href="#">Monitores</a>
 
                             </li>
 
@@ -401,9 +482,6 @@
             </div>
         </div>
     </header>
-
-
-
     <div id="carouselExampleCaptions" class="carousel slide portada">
         <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
@@ -451,7 +529,6 @@
             <span class="visually-hidden">Next</span>
         </button>
     </div>
-
     <section id="seccion1">
 
         <article onclick="mostrar();" class="categoriasPrincipales">
@@ -522,7 +599,19 @@
 
 
 
+    <section id="todoslosproductos">
 
+        <h1 class="tituloPrincipalProducto">Gamer</h1>
+
+        <section id="seccionGamer">
+
+        </section>
+
+    </section>
+
+    <section id="contanedorProducto1">
+
+    </section>
 
     <footer id="seccion5">
 
@@ -534,7 +623,7 @@
 
                 <span> <a href="">Servicio al cliente</a> </span>
 
-                <span><a href="">Novedades</a></span>
+                <span><a href="#">Novedades</a></span>
 
 
             </article>
