--- a/Tecnologia.html
+++ b/Tecnologia.html
@@ -31,7 +31,7 @@
                 <i class='bx bx-menu' id="menuIcon"></i>
             </div>
             <div class="logoembalado">
-                <a href="#"><img class="logo" src="img/logoEmbalado.png" alt="logo-embalado"></a>
+                <a href="#"><img class="logo" src="imgt/logoEmbalado.png" alt="logo-embalado"></a>
 
             </div>
 
@@ -45,17 +45,17 @@
 
             <div class="social">
                 <a href="https://instagram.com/embaladoperu?igshid=YmMyMTA2M2Y=" target="_blank" class="instagran"><img
-                        src="img/instagram.png" alt="instagram">
+                        src="imgt/instagram.png" alt="instagram">
                 </a>
 
                 </a>
                 <a href="https://www.facebook.com/embaladoperu" target="_blank" class="facebook">
-                    <img src="img/facebook.png" alt="facebook">
+                    <img src="imgt/facebook.png" alt="facebook">
 
                 </a>
 
                 <a href="https://www.tiktok.com/@embaladoperu?_t=8c8E1Xk6PzB&_r=1" class="tik-tok">
-                    <img src="img/tik-tok.png" alt="tik-tok">
+                    <img src="imgt/tik-tok.png" alt="tik-tok">
                 </a>
 
 
@@ -493,7 +493,7 @@
         </div>
         <div class="carousel-inner imgportada">
             <div class="carousel-item active">
-                <img src="img/SLIDER-PROPUESTA.png" class="d-block w-100 port" alt="embalado">
+                <img src="imgt/SLIDER-PROPUESTA.png" class="d-block w-100 port" alt="embalado">
                 <div class="carousel-caption d-none d-md-block">
                     <p>
 
@@ -505,14 +505,14 @@
                 </div>
             </div>
             <div class="carousel-item imgportada">
-                <img src="img/SLIDER-PROPUESTA-1.png" class="d-block w-100" alt="embalado">
+                <img src="imgt/SLIDER-PROPUESTA-1.png" class="d-block w-100" alt="embalado">
                 <div class="carousel-caption d-none d-md-block">
 
                     </p>
                 </div>
             </div>
             <div class="carousel-item imgportada">
-                <img src="img/SLIDER-PROPUESTA-3.png" class="d-block w-100" alt="embalado">
+                <img src="imgt/SLIDER-PROPUESTA-3.png" class="d-block w-100" alt="embalado">
                 <div class="carousel-caption d-none d-md-block">
 
                 </div>
@@ -630,18 +630,18 @@
 
             <section class="conocenos">
                 <h1>
-                    <img src="img/logoFondoNegro.jpg" alt="logoEmbalado">
+                    <img src="imgt/logoFondoNegro.jpg" alt="logoEmbalado">
                 </h1>
             </section>
 
             <div class="redes1">
                 <span>Siguenos:</span>
                 <div class="redes">
-                    <a href="https://www.facebook.com/embaladoperu" target="_blank"><img src="img/facebook.png" alt="">
+                    <a href="https://www.facebook.com/embaladoperu" target="_blank"><img src="imgt/facebook.png" alt="">
                         Embaladoperu</a>
                     <a href="https://instagram.com/embaladoperu?igshid=YmMyMTA2M2Y=" target="_blank"><img
-                            src="img/instagram.png" alt="">Embaladoperu</a>
-                    <a href="https://www.tiktok.com/@embaladoperu?_t=8c8E1Xk6PzB&_r=1"><img src="img/tik-tok.png"
+                            src="imgt/instagram.png" alt="">Embaladoperu</a>
+                    <a href="https://www.tiktok.com/@embaladoperu?_t=8c8E1Xk6PzB&_r=1"><img src="imgt/tik-tok.png"
                             alt=""></i>Embaladoperu</a>
                 </div>
             </div>
