--- a/tv&audio.html
+++ b/tv&audio.html
@@ -3,3 +3,5 @@
     <p id="contador">${cantidad}</p>
     <input type="button" id="restar" value="-">
 </article>
+
+<img src="imgt/gamer/monitores/GM-MO -0001-1.png" alt=""
