--- a/Gamer.html
+++ b/Gamer.html
@@ -599,19 +599,22 @@
 
 
 
-    <section id="todoslosproductos">
+    <section class="seccion-gamer">
 
-        <h1 class="tituloPrincipalProducto">Gamer</h1>
+        <h1 class="tituloPrincipalProducto">Monitores</h1>
 
-        <section id="seccionGamer">
+        <section class="productos-gamer">
+            <section class="contanedorProduct">
 
+            </section>
         </section>
 
     </section>
 
-    <section id="contanedorProducto1">
 
-    </section>
+
+
+
 
     <footer id="seccion5">
 
@@ -667,7 +670,8 @@
     </footer>
     <script src="javascript/script.js" async></script>
     <script src="javascript/tablet.js" async></script>
-
+    <script src="javascript/gamer.js" async></script>
+    <script src="javascript/audifonos.js" async></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N"
         crossorigin="anonymous"></script>
