--- a/carrito.html
+++ b/carrito.html
@@ -31,7 +31,7 @@
                 <i class='bx bx-menu' id="menuIcon"></i>
             </div>
             <div class="logoembalado">
-                <a href="#"><img class="logo" src="img/logoEmbalado.png" alt="logo-embalado"></a>
+                <a href="#"><img class="logo" src="imgt/logoEmbalado.png" alt="logo-embalado"></a>
 
             </div>
 
@@ -45,17 +45,17 @@
 
             <div class="social">
                 <a href="https://instagram.com/embaladoperu?igshid=YmMyMTA2M2Y=" target="_blank" class="instagran"><img
-                        src="img/instagram.png" alt="instagram">
+                        src="imgt/instagram.png" alt="instagram">
                 </a>
 
                 </a>
                 <a href="https://www.facebook.com/embaladoperu" target="_blank" class="facebook">
-                    <img src="img/facebook.png" alt="facebook">
+                    <img src="imgt/facebook.png" alt="facebook">
 
                 </a>
 
                 <a href="https://www.tiktok.com/@embaladoperu?_t=8c8E1Xk6PzB&_r=1" class="tik-tok">
-                    <img src="img/tik-tok.png" alt="tik-tok">
+                    <img src="imgt/tik-tok.png" alt="tik-tok">
                 </a>
 
 
@@ -346,9 +346,9 @@
                     </li>
 
 
-                    <li class="componentes "><a href="#">Gamer</a>
+                    <li class="componentes "><a href="Gamer.html">Gamer</a>
                         <ul class="subcomponentes c2">
-                            <li><a href="#">Monitores</a>
+                            <li><a href="Gamer.html">Monitores</a>
 
                             </li>
 
@@ -561,9 +561,7 @@
 
     <script src="javascript/script.js" async></script>
     <script src="javascript/tablet.js" async></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N"
-        crossorigin="anonymous"></script>
+    <script src="javascript/gamer.js"></script>
 
 </body>
 
